Closed Bug 1348523 Opened 9 years ago Closed 9 years ago

Crash in nsHtml5Parser::UnblockParser

Categories

(Core :: XPConnect, defect)

52 Branch
Unspecified
Windows 10
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla55
Tracking Status
firefox52 --- unaffected
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: calixte, Assigned: kmag)

References

(Blocks 1 open bug)

Details

(Keywords: crash, regression, Whiteboard: [clouseau])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-21255cb2-0d49-4541-aced-c03272170317. ============================================================= There are 31 crashes on nightly 55 with buildid 20170317111607. In analyzing the backtrace the regression may have been introduced by patch [1] to fix bug 1333990. [1] https://hg.mozilla.org/mozilla-central/rev?node=a62f02519522dd12e5a6ffa2a482d5d6c43912e1
Flags: needinfo?(kmaglione+bmo)
Hm. It looks like we are somehow managing to replace the initial parser while it's blocked.
Assignee: nobody → kmaglione+bmo
Flags: needinfo?(kmaglione+bmo)
(In reply to Kris Maglione [:kmag] from comment #2) > Users in nightlies are hitting the assertion in UnblockParser that ensures > the parser is blocked. The only way that should be able to happen is if the > initial parser is destroyed and a new one is created before we try to > unblock. In theory, that shouldn't happen for the initial parser when it's > blocked this early, so my best guess is that an add-on is ending the > document load and then re-opening the document. Ah, I think I see part of what's happening now. We fire the document-element-inserted event after document.open() calls on already loaded documents, too, which means we attempt to inject scripts a second time, with a script-created parser.
I am someone who is having that bug, and if I have uBlock (Web Extension Version) enabled it crashes the page* whenever I try to visit it, but if I disable uBlock (Web Extension Version) the page loads fine. This is on both my regular profile and a completely new profile. *http://www.pixiv.net/member_illust.php?mode=medium&illust_id=60123890 uBlock: https://github.com/gorhill/uBlock/releases
Oh, and I am using uBlock version 1.11.5b1.
Comment on attachment 8848807 [details] Bug 1348523: Store a weak reference to the blocked parser, and use when unblocking. https://reviewboard.mozilla.org/r/121698/#review123802
Attachment #8848807 - Flags: review?(hsivonen) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/982a53cf84037aa5977e9c81d0bbd3540c087165 Bug 1348523: Store a weak reference to the blocked parser, and use when unblocking. r=hsivonen
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Reproducing my steps from earlier doesn't crash my tab anymore, so it seems to be fixed for me.
Thanks for confirming.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: