Bug 1348523: Store a weak reference to the blocked parser, and use when unblocking. r=hsivonen

Users in nightlies are hitting the assertion in UnblockParser that ensures the
parser is blocked. The only way that should be able to happen is if the
initial parser is destroyed and a new one is created before we try to unblock.
In theory, that shouldn't happen for the initial parser when it's blocked
this early, so my best guess is that an add-on is ending the document load and
then re-opening the document.

MozReview-Commit-ID: iQkE2aWDTZ

--HG--
extra : rebase_source : a5f225cf45dc3552059b347f441120fea6476ccd
extra : amend_source : ed393f79c7626c65af33638da140f235a2d97743